--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
     <ul class="header__lang-menu">
-      <li><a class="header__lang-link header__lang-link_active" href="./russian-travel-ru.html">Ru</a></li>
+      <li><a class="header__lang-link header__lang-link_active" href="./index.html">Ru</a></li>
       <li><a class="header__lang-link" href="./russian-travel-en.html">En</a></li>
     </ul>
   </header>
